# verifiable-llm

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  README.md  REPORT.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/vllm-cli/: Cargo.toml
crates/vllm-cli/src/: main.rs
crates/vllm-cli/tests/: zk_pipeline.rs
crates/vllm-core/: Cargo.toml
crates/vllm-core/src/: chain.rs  commit.rs  gguf.rs  hex.rs  lib.rs  merkle.rs  protocol.rs  trace.rs  transcript.rs
crates/vllm-infer/: Cargo.toml
crates/vllm-infer/examples/: drift_attack.rs  logit_diff.rs
crates/vllm-infer/src/: det.rs  det_math.rs  engine.rs  lib.rs  model.rs  testmodel.rs
crates/vllm-infer/tests/: tiny_model.rs
crates/vllm-verify/: Cargo.toml
crates/vllm-verify/src/: lib.rs
crates/vllm-verify/tests/: protocol.rs
crates/vllm-zk/: Cargo.toml
crates/vllm-zk-halo2/: Cargo.toml
crates/vllm-zk-halo2/examples/: bench_argmax.rs  bench_argmax_halo2.rs
crates/vllm-zk-halo2/src/: circuit.rs  commit.rs  lib.rs
crates/vllm-zk/examples/: bench_argmax.rs
crates/vllm-zk/src/: air.rs  lib.rs  prover.rs  rescue.rs
docs/: protocol.md
paper/: README.md  verifiable-llm.tex
scripts/: demo.sh
