[workspace]
resolver = "2"
members = ["crates/vllm-core", "crates/vllm-infer", "crates/vllm-verify", "crates/vllm-zk", "crates/vllm-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
vllm-core = { path = "crates/vllm-core" }
vllm-infer = { path = "crates/vllm-infer" }
vllm-verify = { path = "crates/vllm-verify" }
vllm-zk = { path = "crates/vllm-zk" }
blake3 = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = "0.23"

[profile.release]
lto = "thin"
