[package]
name = "vllm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Commitments, hashing, and trace formats for verifiable local LLM inference"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
