[package]
name = "vllm-zk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "STARK proof that an emitted token is the argmax of a committed logit vector"

[dependencies]
winterfell = { version = "0.13", features = ["concurrent"] }
rand = "0.9"

[dev-dependencies]
